feat: aggressive cover enrichment + back-to-top

--- a/.github/workflows/hourly-sync-and-deploy.yml
+++ b/.github/workflows/hourly-sync-and-deploy.yml
@@ -42,6 +42,12 @@ jobs:
         run: npm ci
 
       - name: Sync Data
+        env:
+          # 偏激进：尽量补齐封面（og:image / twitter:image），让首页“少缺图”。
+          # 如需回退保守，可把 MAX 调小或设为 0 关闭补全。
+          ACG_COVER_ENRICH_MAX: "260"
+          ACG_COVER_ENRICH_PER_SOURCE_MAX: "220"
+          ACG_COVER_ENRICH_DELAY_MS: "100"
         run: npm run sync
 
       - name: Configure Pages
