--- a/package.json
+++ b/package.json
@@ -12,19 +12,14 @@
     "check": "astro check"
   },
   "dependencies": {
-    "@astrojs/react": "^4.4.2",
     "@astrojs/tailwind": "^6.0.2",
     "astro": "^5.16.5",
     "cheerio": "^1.1.2",
-    "fast-xml-parser": "^5.3.3",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "fast-xml-parser": "^5.3.3"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.6",
     "@types/node": "^24.5.2",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
