feat: harden external links and add tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Typecheck (Astro)
         run: npm run check
 
+      - name: Tests
+        run: npm test
+
       - name: Build
         env:
           ACG_BASE: /ACG
