--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "acg",
   "private": true,
   "type": "module",
-  "version": "0.2.1",
+  "version": "0.2.2",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -11,7 +14,8 @@
     "sync:dry": "tsx scripts/sync.ts --dry-run",
     "validate": "tsx scripts/validate-generated-data.ts",
     "budget": "tsx scripts/perf-budget.ts",
-    "check": "astro check"
+    "check": "astro check",
+    "test": "node --import tsx --test tests/index.test.ts"
   },
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
@@ -21,7 +25,7 @@
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.6",
-    "@types/node": "^24.5.2",
+    "@types/node": "^20.0.0",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
