--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "acg",
   "private": true,
   "type": "module",
-  "version": "0.5.14",
+  "version": "0.5.15",
   "engines": {
     "node": ">=20"
   },
@@ -14,6 +14,8 @@
     "sync:dry": "tsx scripts/sync.ts --dry-run",
     "validate": "tsx scripts/validate-generated-data.ts",
     "summary": "tsx scripts/step-summary.ts",
+    "lhci": "npx --yes @lhci/cli@0.15.1 autorun --config .lighthouserc.json",
+    "lhci:local": "tsx scripts/lhci-local.ts",
     "lhci:summary": "tsx scripts/lhci-step-summary.ts",
     "budget": "tsx scripts/perf-budget.ts",
     "check": "astro check",
