--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Tests
         run: npm test
 
+      - name: Validate Generated Data
+        run: npm run validate
+
       - name: Build
         env:
           ACG_BASE: /ACG
@@ -37,4 +40,3 @@ jobs:
 
       - name: Perf Budget (dist size gate)
         run: npm run budget
-
