feat(lhci): add simulated throttling monitor

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "validate": "tsx scripts/validate-generated-data.ts",
     "summary": "tsx scripts/step-summary.ts",
     "lhci": "npx --yes @lhci/cli@0.15.1 autorun --config .lighthouserc.json",
+    "lhci:simulate": "npx --yes @lhci/cli@0.15.1 autorun --config .lighthouserc.simulate.json",
     "lhci:local": "tsx scripts/lhci-local.ts",
+    "lhci:local:simulate": "tsx scripts/lhci-local.ts --simulate",
     "lhci:summary": "tsx scripts/lhci-step-summary.ts",
     "budget": "tsx scripts/perf-budget.ts",
     "check": "astro check",
