--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,14 @@ jobs:
       - name: Typecheck (Astro)
         run: npm run check
 
-      - name: Tests
-        run: npm test
+      - name: Tests (Coverage)
+        run: npm run test:coverage
+
+      - name: Upload Coverage Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage
+          path: coverage
 
       - name: Validate Generated Data
         run: npm run validate
