--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "acg",
   "private": true,
   "type": "module",
-  "version": "0.5.27",
+  "version": "0.5.28",
   "engines": {
     "node": ">=20"
   },
@@ -25,7 +25,8 @@
     "budget": "tsx scripts/perf-budget.ts",
     "check": "astro check",
     "test": "node --import tsx --test tests/index.test.ts",
-    "test:coverage": "c8 --check-coverage --lines 35 --functions 35 --branches 50 --statements 35 --reporter=text-summary --reporter=lcov node --import tsx --test tests/index.test.ts",
+    "test:coverage": "c8 --check-coverage --lines 35 --functions 35 --branches 50 --statements 35 --reporter=text-summary --reporter=lcov --reporter=json-summary node --import tsx --test tests/index.test.ts",
+    "coverage:summary": "tsx scripts/coverage-step-summary.ts",
     "prepare": "husky"
   },
   "dependencies": {
