--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,41 @@ permissions:
   contents: read
 
 jobs:
+  commitlint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+
+      - name: Install
+        run: npm ci
+
+      - name: Commitlint (PR)
+        if: github.event_name == 'pull_request'
+        run: |
+          npx --no-install commitlint \
+            --from "${{ github.event.pull_request.base.sha }}" \
+            --to "${{ github.event.pull_request.head.sha }}" \
+            --verbose
+
+      - name: Commitlint (push)
+        if: github.event_name == 'push'
+        run: |
+          BEFORE="${{ github.event.before }}"
+          if [ "$BEFORE" = "0000000000000000000000000000000000000000" ]; then
+            npx --no-install commitlint --from "${{ github.sha }}~1" --to "${{ github.sha }}" --verbose
+          else
+            npx --no-install commitlint --from "$BEFORE" --to "${{ github.sha }}" --verbose
+          fi
+
   build:
     runs-on: ubuntu-latest
     steps:
