--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install
         run: npm ci
 
+      - name: Bootstrap Data (no network)
+        run: npm run bootstrap:data
+
       - name: Build (base=/)
         env:
           ACG_BASE: /
